<resources>
    <string name="app_name">PawRescue</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor
    </string>
    <integer name="success">1</integer>
    <integer name="password_mismatch_error">2</integer>
    <integer name="empty_field_error">3</integer>
    <integer name="error">4</integer>
        <string name="empty_field_error">All fields must be filled</string>
        <string name="password_mismatch_error">Passwords do not match</string>
        <string name="success">User registered successfully</string>
        <string name="error">Error registering user</string>

    <string-array name="sos_array">
        <item>Select a Country </item>
        <item>Turkey</item>
        <item>Germany</item>
        <item>France</item>
        <item>Belgium</item>
        <item>Spain</item>
        <item>Mexico</item>
        <item>Japan</item>
        <item>Palestine</item>
        <item>Poland</item>
        <item>United Arab Emirates</item>
    </string-array>

    <string-array name="countryCode_array">
        <item>Select a Country </item>
        <item>TR</item>
        <item>DE</item>
        <item>FR</item>
        <item>BE</item>
        <item>ES</item>
        <item>MX</item>
        <item>JP</item>
        <item>PS</item>
        <item>PL</item>
        <item>AE</item>
    </string-array>

    <string-array name="city_array">
        <item>Konya</item>
        <item>Kabil</item>
        <item>Rize</item>
        <item>Ankara</item>
        <item>Erzincan</item>
        <item>Dust2</item>
        <item>Erzurum</item>
        <item>Kayseri</item>
        <item>Winterfell</item>
        <item>King\'s Landing</item>
        <item>Manisa</item>
        <item>Mardin</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Şanlıurfa</item>
        <item>Sihirdar Vadisi</item>
    </string-array>

    <string-array name="city_array_us">
        <item>Choose State</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>American Samoa</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Mariana Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Trust Territories</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string-array name="neighborhood_array">
        <item>Neighborhood A</item>
        <item>Neighborhood B</item>
        <item>Neighborhood C</item>

    </string-array>

    <!-- Login Page -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Need an account? Sign up!</string>
    <string name="sign_up_button">SIGN UP!</string>
    <string name="logo_description">PawRescue Logo</string>

    <string-array name="species_array">
        <item>Choose Type</item>
        <item>Dog</item>
        <item>Cat</item>
    </string-array>

    <string-array name="age_array">
        <item>Choose Age</item>
        <item>Baby</item>
        <item>Young</item>
        <item>Adult</item>
    </string-array>

    <string-array name="gender">
        <item>Choose Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>