<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Your existing design starts here -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back3"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="600dp"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"

            android:contentDescription="@string/logo_description"
            android:src="@drawable/paw_logo" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/username"
            android:padding="12dp"
            android:textColorHint="@android:color/black"
            android:textSize="18sp"
            android:layout_below="@id/imageViewLogo"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextUsername"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColorHint="@android:color/black"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPassword"
            android:layout_marginTop="24dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_button_background"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
    </RelativeLayout>
    <!-- Your existing design ends here -->

    <!-- You can add additional UI elements within the ConstraintLayout if needed -->

</androidx.constraintlayout.widget.ConstraintLayout>
